cmake_minimum_required(VERSION 3.17)
project(leetcode)

set(CMAKE_CXX_STANDARD 14)

add_executable(1_TwoSum editor/en/1_TwoSum.cpp)
add_executable(125_ValidPalindrome editor/en/125_ValidPalindrome.cpp)
add_executable(363_MaxSumOfRectangleNoLargerThanK editor/en/363_MaxSumOfRectangleNoLargerThanK.cpp)
add_executable(3_LongestSubstringWithoutRepeatingCharacters editor/en/3_LongestSubstringWithoutRepeatingCharacters.cpp)
add_executable(146_LRUCache editor/en/146_LRUCache.cpp)
add_executable(91_DecodeWays editor/en/91_DecodeWays.cpp)
add_executable(560_SubarraySumEqualsK editor/en/560_SubarraySumEqualsK.cpp)
add_executable(415_AddStrings editor/en/415_AddStrings.cpp)
add_executable(163_MissingRanges editor/en/163_MissingRanges.cpp)
add_executable(215_KthLargestElementInAnArray editor/en/215_KthLargestElementInAnArray.cpp)
add_executable(162_FindPeakElement editor/en/162_FindPeakElement.cpp)
add_executable(33_SearchInRotatedSortedArray editor/en/33_SearchInRotatedSortedArray.cpp)
add_executable(74_SearchA2DMatrix editor/en/74_SearchA2DMatrix.cpp)
add_executable(322_CoinChange editor/en/322_CoinChange.cpp)
add_executable(300_LongestIncreasingSubsequence editor/en/300_LongestIncreasingSubsequence.cpp)
add_executable(251_Flatten2DVector editor/en/251_Flatten2DVector.cpp)
add_executable(297_SerializeAndDeserializeBinaryTree editor/en/297_SerializeAndDeserializeBinaryTree.cpp)
add_executable(380_InsertDeleteGetRandomO_1_ "editor/en/380_InsertDeleteGetRandomO_1_.cpp")
add_executable(172_FactorialTrailingZeroes editor/en/172_FactorialTrailingZeroes.cpp)
add_executable(46_Permutations editor/en/46_Permutations.cpp)
add_executable(47_PermutationsII editor/en/47_PermutationsII.cpp)
add_executable(973_KClosestPointsToOrigin editor/en/973_KClosestPointsToOrigin.cpp)