cmake_minimum_required(VERSION 3.17)
project(leetcode)

set(CMAKE_CXX_STANDARD 14)

add_executable(1_TwoSum editor/en/1_TwoSum.cpp)
add_executable(125_ValidPalindrome editor/en/125_ValidPalindrome.cpp)
add_executable(363_MaxSumOfRectangleNoLargerThanK editor/en/363_MaxSumOfRectangleNoLargerThanK.cpp)
add_executable(3_LongestSubstringWithoutRepeatingCharacters editor/en/3_LongestSubstringWithoutRepeatingCharacters.cpp)
add_executable(146_LRUCache editor/en/146_LRUCache.cpp)
add_executable(91_DecodeWays editor/en/91_DecodeWays.cpp)
add_executable(560_SubarraySumEqualsK editor/en/560_SubarraySumEqualsK.cpp)
add_executable(415_AddStrings editor/en/415_AddStrings.cpp)
add_executable(163_MissingRanges editor/en/163_MissingRanges.cpp)
add_executable(215_KthLargestElementInAnArray editor/en/215_KthLargestElementInAnArray.cpp)
add_executable(162_FindPeakElement editor/en/162_FindPeakElement.cpp)
add_executable(33_SearchInRotatedSortedArray editor/en/33_SearchInRotatedSortedArray.cpp)
add_executable(74_SearchA2DMatrix editor/en/74_SearchA2DMatrix.cpp)
add_executable(322_CoinChange editor/en/322_CoinChange.cpp)
add_executable(300_LongestIncreasingSubsequence editor/en/300_LongestIncreasingSubsequence.cpp)
add_executable(251_Flatten2DVector editor/en/251_Flatten2DVector.cpp)
add_executable(297_SerializeAndDeserializeBinaryTree editor/en/297_SerializeAndDeserializeBinaryTree.cpp)
add_executable(380_InsertDeleteGetRandomO_1_ "editor/en/380_InsertDeleteGetRandomO_1_.cpp")
add_executable(172_FactorialTrailingZeroes editor/en/172_FactorialTrailingZeroes.cpp)
add_executable(46_Permutations editor/en/46_Permutations.cpp)
add_executable(47_PermutationsII editor/en/47_PermutationsII.cpp)
add_executable(973_KClosestPointsToOrigin editor/en/973_KClosestPointsToOrigin.cpp)
add_executable(246_StrobogrammaticNumber editor/en/246_StrobogrammaticNumber.cpp)
add_executable(152_MaximumProductSubarray editor/en/152_MaximumProductSubarray.cpp)
add_executable(227_BasicCalculatorII editor/en/227_BasicCalculatorII.cpp)
add_executable(139_WordBreak editor/en/139_WordBreak.cpp)
add_executable(79_WordSearch editor/en/79_WordSearch.cpp)
add_executable(1461_CheckIfAStringContainsAllBinaryCodesOfSizeK editor/en/1461_CheckIfAStringContainsAllBinaryCodesOfSizeK.cpp)
add_executable(236_LowestCommonAncestorOfABinaryTree editor/en/236_LowestCommonAncestorOfABinaryTree.cpp)
add_executable(138_CopyListWithRandomPointer editor/en/138_CopyListWithRandomPointer.cpp)
add_executable(823_BinaryTreesWithFactors editor/en/823_BinaryTreesWithFactors.cpp)
add_executable(23_MergeKSortedLists editor/en/23_MergeKSortedLists.cpp)
add_executable(Heap editor/en/Heap.cpp)
add_executable(1721_SwappingNodesInALinkedList editor/en/1721_SwappingNodesInALinkedList.cpp)
add_executable(69_Sqrt_x "editor/en/69_Sqrt_x.cpp")
add_executable(171_ExcelSheetColumnNumber editor/en/171_ExcelSheetColumnNumber.cpp)
add_executable(378_KthSmallestElementInASortedMatrix editor/en/378_KthSmallestElementInASortedMatrix.cpp)
add_executable(289_GameOfLife editor/en/289_GameOfLife.cpp)
add_executable(287_FindTheDuplicateNumber editor/en/287_FindTheDuplicateNumber.cpp)