cmake_minimum_required(VERSION 3.17)
project(leetcode)

set(CMAKE_CXX_STANDARD 14)

add_executable(1_TwoSum editor/en/1_TwoSum.cpp)
add_executable(125_ValidPalindrome editor/en/125_ValidPalindrome.cpp)
add_executable(363_MaxSumOfRectangleNoLargerThanK editor/en/363_MaxSumOfRectangleNoLargerThanK.cpp)
add_executable(3_LongestSubstringWithoutRepeatingCharacters editor/en/3_LongestSubstringWithoutRepeatingCharacters.cpp)
add_executable(146_LRUCache editor/en/146_LRUCache.cpp)
add_executable(91_DecodeWays editor/en/91_DecodeWays.cpp)
add_executable(560_SubarraySumEqualsK editor/en/560_SubarraySumEqualsK.cpp)
add_executable(415_AddStrings editor/en/415_AddStrings.cpp)
add_executable(163_MissingRanges editor/en/163_MissingRanges.cpp)
add_executable(215_KthLargestElementInAnArray editor/en/215_KthLargestElementInAnArray.cpp)
add_executable(162_FindPeakElement editor/en/162_FindPeakElement.cpp)
add_executable(33_SearchInRotatedSortedArray editor/en/33_SearchInRotatedSortedArray.cpp)
add_executable(74_SearchA2DMatrix editor/en/74_SearchA2DMatrix.cpp)
add_executable(322_CoinChange editor/en/322_CoinChange.cpp)
add_executable(300_LongestIncreasingSubsequence editor/en/300_LongestIncreasingSubsequence.cpp)
add_executable(251_Flatten2DVector editor/en/251_Flatten2DVector.cpp)
add_executable(297_SerializeAndDeserializeBinaryTree editor/en/297_SerializeAndDeserializeBinaryTree.cpp)
add_executable(380_InsertDeleteGetRandomO_1_ "editor/en/380_InsertDeleteGetRandomO_1_.cpp")
add_executable(172_FactorialTrailingZeroes editor/en/172_FactorialTrailingZeroes.cpp)
add_executable(46_Permutations editor/en/46_Permutations.cpp)
add_executable(47_PermutationsII editor/en/47_PermutationsII.cpp)
add_executable(973_KClosestPointsToOrigin editor/en/973_KClosestPointsToOrigin.cpp)
add_executable(246_StrobogrammaticNumber editor/en/246_StrobogrammaticNumber.cpp)
add_executable(152_MaximumProductSubarray editor/en/152_MaximumProductSubarray.cpp)
add_executable(227_BasicCalculatorII editor/en/227_BasicCalculatorII.cpp)
add_executable(139_WordBreak editor/en/139_WordBreak.cpp)
add_executable(79_WordSearch editor/en/79_WordSearch.cpp)
add_executable(1461_CheckIfAStringContainsAllBinaryCodesOfSizeK editor/en/1461_CheckIfAStringContainsAllBinaryCodesOfSizeK.cpp)
add_executable(236_LowestCommonAncestorOfABinaryTree editor/en/236_LowestCommonAncestorOfABinaryTree.cpp)
add_executable(138_CopyListWithRandomPointer editor/en/138_CopyListWithRandomPointer.cpp)
add_executable(823_BinaryTreesWithFactors editor/en/823_BinaryTreesWithFactors.cpp)
add_executable(23_MergeKSortedLists editor/en/23_MergeKSortedLists.cpp)
add_executable(Heap Heap.cpp)
add_executable(1721_SwappingNodesInALinkedList editor/en/1721_SwappingNodesInALinkedList.cpp)
add_executable(69_Sqrt_x "editor/en/69_Sqrt_x.cpp")
add_executable(171_ExcelSheetColumnNumber editor/en/171_ExcelSheetColumnNumber.cpp)
add_executable(378_KthSmallestElementInASortedMatrix editor/en/378_KthSmallestElementInASortedMatrix.cpp)
add_executable(289_GameOfLife editor/en/289_GameOfLife.cpp)
add_executable(287_FindTheDuplicateNumber editor/en/287_FindTheDuplicateNumber.cpp)
add_executable(207_CourseSchedule editor/en/207_CourseSchedule.cpp)
add_executable(210_CourseScheduleII editor/en/210_CourseScheduleII.cpp)
add_executable(606_ConstructStringFromBinaryTree editor/en/606_ConstructStringFromBinaryTree.cpp)
add_executable(444_SequenceReconstruction editor/en/444_SequenceReconstruction.cpp)
add_executable(144_BinaryTreePreorderTraversal editor/en/144_BinaryTreePreorderTraversal.cpp)
add_executable(94_BinaryTreeInorderTraversal editor/en/94_BinaryTreeInorderTraversal.cpp)
add_executable(145_BinaryTreePostorderTraversal editor/en/145_BinaryTreePostorderTraversal.cpp)
add_executable(250_CountUnivalueSubtrees editor/en/250_CountUnivalueSubtrees.cpp)
add_executable(536_ConstructBinaryTreeFromString editor/en/536_ConstructBinaryTreeFromString.cpp)
add_executable(341_FlattenNestedListIterator editor/en/341_FlattenNestedListIterator.cpp)
add_executable(348_DesignTicTacToe editor/en/348_DesignTicTacToe.cpp)
add_executable(78_Subsets editor/en/78_Subsets.cpp)
add_executable(179_LargestNumber editor/en/179_LargestNumber.cpp)
add_executable(208_ImplementTrie_PrefixTree editor/en/208_ImplementTrie_PrefixTree.cpp)
add_executable(340_LongestSubstringWithAtMostKDistinctCharacters editor/en/340_LongestSubstringWithAtMostKDistinctCharacters.cpp)
add_executable(279_PerfectSquares editor/en/279_PerfectSquares.cpp)
add_executable(131_PalindromePartitioning editor/en/131_PalindromePartitioning.cpp)
add_executable(130_SurroundedRegions editor/en/130_SurroundedRegions.cpp)
add_executable(148_SortList editor/en/148_SortList.cpp)
add_executable(395_LongestSubstringWithAtLeastKRepeatingCharacters editor/en/395_LongestSubstringWithAtLeastKRepeatingCharacters.cpp)
add_executable(1197_MinimumKnightMoves editor/en/1197_MinimumKnightMoves.cpp)
add_executable(695_MaxAreaOfIsland editor/en/695_MaxAreaOfIsland.cpp)
add_executable(547_NumberOfProvinces editor/en/547_NumberOfProvinces.cpp)
add_executable(1209_RemoveAllAdjacentDuplicatesInStringII editor/en/1209_RemoveAllAdjacentDuplicatesInStringII.cpp)
add_executable(739_DailyTemperatures editor/en/739_DailyTemperatures.cpp)
add_executable(811_SubdomainVisitCount editor/en/811_SubdomainVisitCount.cpp)
add_executable(394_DecodeString editor/en/394_DecodeString.cpp)
add_executable(332_ReconstructItinerary editor/en/332_ReconstructItinerary.cpp)
add_executable(680_ValidPalindromeII editor/en/680_ValidPalindromeII.cpp)
add_executable(767_ReorganizeString editor/en/767_ReorganizeString.cpp)
add_executable(518_CoinChange2 editor/en/518_CoinChange2.cpp)
add_executable(445_AddTwoNumbersII editor/en/445_AddTwoNumbersII.cpp)
add_executable(692_TopKFrequentWords editor/en/692_TopKFrequentWords.cpp)
add_executable(PriorityQueue PriorityQueue.cpp)
add_executable(1041_RobotBoundedInCircle editor/en/1041_RobotBoundedInCircle.cpp)
add_executable(981_TimeBasedKeyValueStore editor/en/981_TimeBasedKeyValueStore.cpp)
add_executable(1249_MinimumRemoveToMakeValidParentheses editor/en/1249_MinimumRemoveToMakeValidParentheses.cpp)
add_executable(1010_PairsOfSongsWithTotalDurationsDivisibleBy60 editor/en/1010_PairsOfSongsWithTotalDurationsDivisibleBy60.cpp)
add_executable(1348_TweetCountsPerFrequency editor/en/1348_TweetCountsPerFrequency.cpp)
add_executable(1370_IncreasingDecreasingString editor/en/1370_IncreasingDecreasingString.cpp)
add_executable(528_RandomPickWithWeight editor/en/528_RandomPickWithWeight.cpp)
add_executable(443_StringCompression editor/en/443_StringCompression.cpp)
add_executable(1152_AnalyzeUserWebsiteVisitPattern editor/en/1152_AnalyzeUserWebsiteVisitPattern.cpp)
add_executable(253_MeetingRoomsII editor/en/253_MeetingRoomsII.cpp)
add_executable(367_ValidPerfectSquare editor/en/367_ValidPerfectSquare.cpp)
add_executable(CppBound CppBound.cpp)
add_executable(994_RottingOranges editor/en/994_RottingOranges.cpp)
add_executable(621_TaskScheduler editor/en/621_TaskScheduler.cpp)
add_executable(323_NumberOfConnectedComponentsInAnUndirectedGraph editor/en/323_NumberOfConnectedComponentsInAnUndirectedGraph.cpp)
add_executable(1354_ConstructTargetArrayWithMultipleSums editor/en/1354_ConstructTargetArrayWithMultipleSums.cpp)
add_executable(204_CountPrimes editor/en/204_CountPrimes.cpp)
add_executable(4_MedianOfTwoSortedArrays editor/en/4_MedianOfTwoSortedArrays.cpp)
add_executable(1423_MaximumPointsYouCanObtainFromCards editor/en/1423_MaximumPointsYouCanObtainFromCards.cpp)
add_executable(35_SearchInsertPosition editor/en/35_SearchInsertPosition.cpp)
add_executable(304_RangeSumQuery2DImmutable editor/en/304_RangeSumQuery2DImmutable.cpp)
add_executable(244_ShortestWordDistanceII editor/en/244_ShortestWordDistanceII.cpp)